
20070105: Applied patch #1629066 - workwithscanner.html - thanks to loh_tar for the patch.

20070105: Applied patch #1629449 - quotes.html - thanks to loh_tar for the patch.

20070106: Moved preferences dialog into qtstalkerlib. Preferences now update whenever the apply button is
          pressed. Dialog is now non-modal.

20070107: Fixed copy CUS examples for new installs.

20070107: Fixed 0.33/0.34 dialog reappearing.

20070107: Fixed bug that segfaults if indicator is enabled with no chart loaded.

20070107: Fixed edit chart to update changes when dialog exited.

20070107: Fixed volume adjusted when stock is split.

20070107: Applied patch #1630082 - horizontalline.html - thanks to loh_tar for the patch.

20070107: Fixed chart objects dont adjust along with a stock split. However FiboLine can only be adjusted if both
          the start and end points fall within the adjusted range.
          
20070108: Applied patch #1630165 - chartobjects.html - thanks to loh_tar for the patch.

20070109: Added an exchange field to charts.

20070111: Fixed bug #1633007 - Yahoo Quotes, Error after add new Stock.

20070125: Yahoo has changed the historical date format to YYYY-MM-DD and now mixes the old and new randomly it appears.
          Yahoo plugin now handles both formats.

20070125: Applied patch #1640810 - Chart fixed at the right hand side - thanks to loh_tar for the patch

20070125: Applied patch #1637852 - new icon offer for "delete group" - thanks to loh_tar for the patch

20070130: Applied patch #1647204 - fix back psButton - thanks to loh_tar for the patch

20070130: Applied patch #1645115 - some IndicatorPlot Modifications - thanks to loh_tar for the patch.

20070130: Applied patch #1646038 - restore NavAreaSize - thanks to loh_tar for the patch.

20070130: Applied patch #1646591 - add preference color buttons to COs - thanks to loh_tar for the patch.

20070130: Applied patch #1646862 - rest COs Edit Dialogs - thanks to loh_tar for the patch.


