@@ -33,6 +33,7 @@ To Do:
 - add ExScript CUS interface for indicators and plots.
 - remove full paths from all files, only symbol is needed for index lookup
 - change yahoo plugin to get fundamentals on new charts automatically 
+- display chart object info when cursor hovers over them in the data panel or make tooltip.
 
 
 Maybe some day:
