@@ -195,5 +195,11 @@
 
 20070130: Applied patch #1646862 - rest COs Edit Dialogs - thanks to loh_tar for the patch.
 
+20070202: Applied patch #1650181 - update dev docs - thanks to loh_tar for the patch.
+
+20070202: Applied patch #1650119 - restore nav panel properly - thanks to loh_tar for the patch.
+
+20070202: Applied patch #1649368 - added identifier info to buy/sellarrow chart objects - thanks to xley for the patch.
+
 
 
